devx.com (archived on 2002-06-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education;informationtech",
  "char_count": 5048,
  "classifier_probability": 0.92,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.48,
  "homepage_snapshot_redirected_domain": "devx.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020329155220id_/http://devx.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020329155220id_/http%3A//devx.com",
  "interval": "2002_A",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "devx.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020604015145id_/http%3A//www.devx.com/free/help/privacy.asp",
  "policy_title": "Privacy Statement for DevX",
  "policy_url": "devx.com/free/help/privacy.asp",
  "sha1": "5f018e21e6cd8c753b38c827eb9bff9e3f85d7aa",
  "simhash": 2796362889147978131,
  "simhash_updated": false,
  "site_hostname": "devx.com",
  "site_url": "http://devx.com",
  "smog": 14.41,
  "strict_updated": false,
  "timestamp": "20020604015145",
  "word_count": 810,
  "year": 2002
}

--- a/d/de/dev/devx.com.html
+++ b/d/de/dev/devx.com.html
@@ -1,53 +1,41 @@
-<!--The following is the downloaded HTML source of the devx.com privacy policy that was archived on 2001-10-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011016101000id_/http%3A//www.devx.com/free/help/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the devx.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604015145id_/http%3A//www.devx.com/free/help/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <link rel="stylesheet" href="/includes/devxstyles.css" type="text/css">
 <script language="JavaScript">
-AppServerZoneURL = 'www.appserver-zone.com';
-ASPZoneURL = 'www.asp-zone.com';
-BuilderLiveURL = 'www.builder.com';
-CplusZoneURL = 'www.cplus-zone.com';
+AppServerZoneURL = 'www.devx.com/appserver';
+ASPZoneURL = 'www.devx.com/asp';
+CPlusZoneURL = 'www.devx.com/cplus';
 CareerLinkURL = 'careerlink.devx.com';
-ConferencesURL = '';
-ConfURL = 'conferences.devx.com';
 DevXURL = 'www.devx.com';
-DHTMLZoneURL = 'www.dhtml-zone.com';
+DHTMLZoneURL = 'www.devx.com/dhtml';
 DiscussionURL = 'news.devx.com';
-EOURL = 'exchange.devx.com';
-EDevConURL = 'www.edevcon.com';
-EntZoneURL = 'www.enterprise-zone.com';
-ExSummitURL = '';
-EventCenterURL = 'events.devx.com';
-FawcetteURL = 'www.fawcette.com';
-GSVBURL = 'gettingstarted.vbpj.com';
+EntZoneURL = 'www.devx.com/enterprise';
 inquiryURL = 'www.inquiry.com';
-JavaHowToURL = 'www.javahow.to';
-JavaProURL = 'www.java-pro.com';
-JavaZoneURL = 'www.java-zone.com';
+JavaHowToURL = 'www.devx.com/javahowto';
+JavaProURL = 'www.devx.com/javapro';
+JavaZoneURL = 'www.devx.com/java';
 MarketPlaceURL = '';
-NetMeetingURL = 'www.netmeeting-zone.com';
-SecurityZoneURL = 'security.devx.com';
-SQL2TheMaxURL = 'www.sql2themax.com';
-SQLZoneURL = 'www.sql-zone.com';
-UMLZoneURL = 'www.uml-zone.com';
+NetMeetingURL = 'www.devx.com/netmeeting';
+SecurityZoneURL = 'www.devx.com/security';
+SQLZoneURL = 'www.devx.com/dbzone';
+UMLZoneURL = 'www.devx.com/uml';
 VB2TheMaxURL = 'www.vb2themax.com';
-VBAObjectsURL = 'objects.devx.com';
-VBHowToURL = 'www.vbhow.to';
-VBITSURL = 'www.vbits.net';
-VBPJURL = 'www.vbpj.com';
-VBZoneURL = 'www.vb-zone.com';
-VCDCURL = 'www.vcdc.com';
-VCDJURL = 'www.vcdj.com';
-VSLiveURL = 'www.vslive.com';
-WebZoneURL = 'www.webbuildermag.com';
-XMLMagURL = 'www.xmlmag.com';
-XMLZoneURL = 'www.xml-zone.com';
-
+VBHowToURL = 'www.devx.com/vbhowto';
+VBPJURL = 'www.devx.com/vsm';
+VBZoneURL = 'www.devx.com/vb';
+VCDJURL = 'www.devx.com/cplus';
+WebZoneURL = 'www.devx.com/webdev';
+XMLMagURL = 'www.devx.com/xml';
+XMLZoneURL = 'www.devx.com/xml';
+EOURL = 'exchange.devx.com';
+ProjectCoolURL = 'www.devx.com/projectcool'
+DevXNetURL = 'www.devx.net'
 </script>
 
 
-<title>Privacy Statement for DevX.com</title>
+<title>Privacy Statement for DevX</title>
 <meta http-equiv="Keywords" content="Help, FAQ, Feedback, Support, Customer Service, Information, Account Information">
 </head>
 
@@ -85,17 +73,14 @@ XMLZoneURL = 'www.xml-zone.com';
     		</tr>
 			</tbody></table>
 		</td>     
-		<td width="5">&nbsp;</td>
+		<td width="30">&nbsp;</td>
 		<td valign="TOP">
 <br>
 <br>
-<br>
-    	</td><td>  
-<br>
-<font face="Verdana, Helvetica, Arial, sans-serif" size="2"><h2>Privacy Statement for DevX.com</h2>
-
+<font face="Arial, Helvetica, sans-serif" size="3"><b>privacy statement for DevX</b><br><br>
+<font face="Arial, Helvetica, sans-serif" size="2">
 <input type="hidden" value="4" name="page">
-DevX.com Inc. has created this privacy statement in order to demonstrate our firm commitment to privacy. This document contains our information gathering and dissemination practices for this site, DevX (http://www.devx.com). 
+DevX Inc. has created this privacy statement in order to demonstrate our firm commitment to privacy. This document contains our information gathering and dissemination practices for this site, DevX (http://www.devx.com). 
 <p>We use your IP address to help diagnose problems with our server, and to administer our Web site. Your IP address is used to gather broad demographic information about site traffic. 
 
 </p><p>We use cookies to deliver content specific to your interests and to save your password so you don't have to re-enter it each time you visit our site. Our site also uses cookies to keep track of your shopping cart in the DevX MarketPlace.
@@ -103,23 +88,26 @@ DevX.com Inc. has created this privacy statement in order to demonstrate our fir
 </p><p>The DevX Marketplace uses an order form for customers to request information, products, and services. We collect visitor's contact information (like their e-mail address) and financial information (like their account or credit card numbers). Contact information from the order form is used to send orders and information about our company to our customers. The customer's contact information is also used to get in touch with the visitor when necessary. Financial information that is collected is used to bill the user for products and services. 
 </p><p>Periodically DevX conducts online surveys, which ask visitors for contact information (like their e-mail address) and demographic information (like their zip code, job title, or software tool use). The customer's contact information is used to contact the visitor when necessary. Users may opt-out of receiving future mailings; see the delete/deactivate section below. Demographic and profile data is also collected at our site. We use this data to tailor our visitor's experience at our site, showing them content that we think they might be interested in, and displaying the content according to their preferences. This information is shared with advertisers on an aggregate basis. 
 </p><p>Periodically DevX will run contests on our site in which we ask visitors for contact information (like their e-mail address). The customer's contact information is used to contact the visitor when necessary. Users may opt-out of receiving future mailings; see the delete/deactivate section below. 
-
-</p><h4>Opt-Out</h4>
+<br><br>
+<b>Third-Party Advertisement Servers</b><br>
+Some DevX advertisers utilize third-party companies like DoubleClick (www.doubleclick.com) to serve their advertisements on to the DevX site. Many times, third-party advertising companies employ cookie and other technologies to measure advertisement effectiveness. While we do not provide these companies with any personal customer information, use of their tracking technology is subject to their individual privacy policies. If you would like more information about privacy policies of the third-party advertising providers, including opt-out information, go to: <a href="http://www.networkadvertising.org/optout_nonppii.asp">http://www.networkadvertising.org/optout_nonppii.asp</a>.
+<br><br>
+<b>Opt-Out</b><br>
 Our site provides users the opportunity to opt-out of receiving information and special offers in email from DevX advertisers and partners at the point where we request information about the visitor.
-<p>This site contains links to other sites. DevX is not responsible for the privacy practices or the content of such Web sites.
-
-</p><h4>Delete/Deactivate</h4>
+</p><p>This site contains links to other sites. DevX is not responsible for the privacy practices or the content of such Web sites.
+<br><br>
+<b>Delete/Deactivate</b><br>
 This site gives users the following options for removing their information from our database to not receive future communications or to no longer receive our service. 
 
-<ol>
+</p><ol>
 <li>You can send e-mail to <a href="mailto:support@devx.com?subject=Delete/Deactivate User Information">support@devx.com</a>
 </li><li>You can visit the following URL: <a href="http://www.devx.com/free/help/help.asp">http://www.devx.com/free/help/help.asp</a>
 </li><li>You can send mail to the following postal address:
 <address>
-913 Emerson Avenue, Palo Alto, CA 94301
+310 Villa Street, Mountain View, CA 94041
 </address></li></ol>
 
-<h4>Change/Modify</h4>
+<b>Change/Modify</b><br>
 This site gives users the following options for changing and modifying 
 information previously provided.
 <ol>
@@ -127,32 +115,69 @@ information previously provided.
 </li><li>You can visit <a href="http://www.devx.com/free/help/help.asp">http://www.devx.com/free/help/help.asp</a>
 </li><li>You can send mail to the following postal address:
 <address>
-913 Emerson Avenue, Palo Alto, CA 94301
+310 Villa Street, Mountain View, CA 94041
 </address></li></ol>
 
 
-<h4>Contacting the Web Site</h4>
+<b>Contacting the Web Site</b><br>
 
 If you have any questions about this privacy statement, the practices of this site, or your dealings with this Web site, you can contact:
 <p>
-</p><address><i>DevX.com Inc.</i></address>
-<address><i>913 Emerson Avenue</i></address>
-<address><i>Palo Alto, CA 94301</i></address>
+</p><address><i>DevX Inc.</i></address>
+<address><i>310 Villa Street</i></address>
+<address><i>Mountain View, CA 94041</i></address>
 <address><i><a href="mailto:support@devx.com?subject=Privacy Statement">support@devx.com</a></i></address>
 
 </font>
 <p>
 <br>
-<table border="0" cellspacing="10">
-    <tbody><tr>
-        <td><a href="/default.asp">
-		<img src="/images/general/mainback.gif" border="0" width="24" height="28" alt="Devx"></a></td>
-        <td><a href="/default.asp">Back to DevX Home</a></td>
-    </tr>
-</tbody></table>
-</p></td>
+
+</p></font></td>
 </tr>
 </tbody></table>
+<center>
+<table>
+	<tbody><tr>
+		<td><center>
+<table border="0" cellspacing="0" cellpadding="10">
+	<tbody><tr>
+		<td><center><font face="Verdana, Helvetica, Arial, sans-serif" size="1">
+		<a href="http://www.devx.com">DevX Home</a> | 
+		<a href="http://www.devx.com/dotnet/">.NET Zone</a> | 
+		<a href="http://www.devx.com/java">Java Zone</a> | 
+		<a href="http://www.devx.com/gethelp/">Get Help</a> |
+		<a href="http://www.devx.com/CoDeMag/">CoDe Magazine</a>
+		<br>
+		<a href="http://www.devx.com/vb">VB Zone</a> |
+		<a href="http://www.devx.com/cplus">C++ Zone</a> |
+		<a href="http://www.devx.com/xml">XML Zone</a> |
+		<a href="http://www.devx.com/enterprise">Enterprise Zone</a> |
+		<a href="http://www.devx.com/dbzone/">Database Dev Zone</a> 
+		<br>
+		<a href="http://www.devx.com/wireless/">Wireless Zone</a>| 
+		<a href="http://www.devx.com/security">Security Zone</a> | 
+		<a href="http://www.devx.com/asp">ASP Zone</a> | 
+		<a href="http://www.devx.com/dhtml">DHTML Zone</a> |
+		<a href="http://www.devx.com/uml">UML Zone</a> 
+		<br>
+		<a href="http://marketplace.devx.com">MarketPlace</a> | 
+		<a href="http://devx.newmediary.com/">RFP Exchange</a> |
+		<a href="http://news.devx.com/">Discussions</a> |
+		<a href="http://www.devx.com/free/newsletters/displayNewsletters.asp">Newsletters</a> |
+		<a href="http://www.devx.com/free/tips/tipsearch.asp">Tech Tips</a> | 
+		<a href="http://www.devx.com/sourcebank/">Sourcebank</a>
+		<br>
+		<a href="http://www.devx.net/advertiser/default.asp">Advertise</a>  |
+		<a href="http://www.devx.com/free/help/help.asp">Help</a>  |
+		<a href="http://www.devx.com/copyright.asp">Copyright</a> |
+		<a href="http://www.devx.com/free/help/privacy.asp">Privacy Statement</a>
+		</font></center></td>
+	</tr>
+</tbody></table>
+</center>
+</td>
+	</tr>
+</tbody></table></center>
 
 
 
