--- a/r/rp/rpg/rpgamer.com.html
+++ b/r/rp/rpg/rpgamer.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rpgamer.com privacy policy that was archived on 2001-12-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011204171120id_/http%3A//www.rpgamer.com/header/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rpgamer.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604020931id_/http%3A//www.rpgamer.com/header/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
   <title>RPGamer Privacy Policy</title>
@@ -8,86 +8,90 @@
 <link rel="SHORTCUT ICON" href="http://www.rpgamer.com/favicon.ico">
 </head>
 
-<body bgcolor="#E8E8E8" text="#000000" link="#AA0000" alink="#AA7700" vlink="#404040" marginheight="0" marginwidth="0" leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0">
+<body bgcolor="#E8E8E8" background="/header/marble-w.jpg" text="#000000" link="#AA0000" alink="#AA7700" vlink="#404040" marginheight="0" marginwidth="0" leftmargin="0" topmargin="0" rightmargin="0" bottommargin="0">
 
 <table cellpadding="0" cellspacing="0" border="0" width="100%" height="100%">
 <tbody><tr valign="top">
-  <td background="/header/left-bg.jpg" width="150" height="64" align="left" valign="top"><a href="/" target="_top"><img src="/header/logo-top.gif" width="150" height="64" alt="V'lanna" border="0"></a></td>
-  <td align="center" colspan="2">
+  <td background="/header/left-bg.jpg" bgcolor="#2F2F2F" width="150" height="64" align="left" valign="top"><a href="http://www.rpgamer.com/" target="_top"><img src="/header/logo-top.gif" width="150" height="64" alt="V'lanna" border="0"></a></td>
+  <td align="center" colspan="4">
 <a target="_top" href="http://ad1.aaddzz.com/click/1/101997/www.rpgamer.com/"><img ismap="" src="http://ad1.aaddzz.com/image/1/101997/www.rpgamer.com/" alt="[Aaddzz Advertisement]" width="468" height="60" border="0"></a>
   </td>
 </tr>
 <tr>
-  <td width="150" height="45" align="left" valign="top"><a href="/" target="_top"><img src="/header/logo-mid.gif" width="150" height="45" alt="RPGamer" border="0"></a></td>
-  <td background="/header/top-bar.gif" bgcolor="#2F2F2F" width="100%" height="45" colspan="2"><table cellpadding="0" cellspacing="0" border="0" width="100%">
+  <td bgcolor="#2F2F2F" width="150" height="45" align="left" valign="top"><a href="http://www.rpgamer.com/" target="_top"><img src="/header/logo-mid.gif" width="150" height="45" alt="RPGamer" border="0"></a></td>
+  <td background="/header/top-bar.gif" bgcolor="#2F2F2F" width="100%" height="45" colspan="4"><table cellpadding="0" cellspacing="0" border="0" width="100%">
    <tbody><tr>
     <td><img src="/header/amer.gif" width="170" height="45" alt="" border="0"></td>
     <td align="center" valign="middle">
 <!--
-      <form action="" enctype="application/x-www-form-urlencoded">
+      <form action="/games/search.cgi" enctype="application/x-www-form-urlencoded" type="post">
       <table cellpadding="0" cellspacing="0" border="0">
       <tr>
        <td valign="middle">
-         <input type="text" class="SearchBox" name="game">&nbsp;</td>
-        <td valign="middle"><input type="image" src="/header/search.gif" border="0" vspace="2"></td>
+
+
+         <input type="text" name="game">&nbsp;
+
+        </td>
+        <td valign="middle"><input type="image" src="/header/search.gif" border="0" vspace="2" width=36 height=24></td>
        </tr>
       </form>
       </table>
--->&nbsp;
+-->
     </td>
     <td><img src="/header/motto.gif" width="245" height="45" alt="" border="0" align="right"></td>
    </tr>
   </tbody></table></td>
 </tr>
 <tr>
-  <td background="/header/left-bg.jpg" valign="top" width="150">
-   <a href="/" target="_top"><img src="/header/logo-bot.gif" width="150" height="21" alt="V'lanna" border="0" valign="top"></a>
+  <td bgcolor="#2F2F2F" background="/header/left-bg.jpg" valign="top" width="150">
+   <a href="http://www.rpgamer.com/" target="_top"><img src="/header/logo-bot.gif" width="150" height="21" alt="V'lanna" border="0" valign="top"></a>
    <table cellpadding="0" cellspacing="0" border="0" width="100%" valign="top">
    <tbody><tr>
-    <td align="center"><img src="/header/date/1.gif" width="12" height="42" alt="1" border="0"><img src="/header/date/2.gif" width="12" height="42" alt="2" border="0"><img src="/header/date/dot.gif" width="7" height="42" alt="." border="0"><img src="/header/date/0.gif" width="12" height="42" alt="0" border="0"><img src="/header/date/3.gif" width="12" height="42" alt="3" border="0"><img src="/header/date/dot.gif" width="7" height="42" alt="." border="0"><img src="/header/date/2001.gif" width="48" height="42" alt="2001" border="0"></td>
+    <td align="center"><img src="/header/date/0.gif" width="12" height="42" alt="0" border="0"><img src="/header/date/6.gif" width="12" height="42" alt="6" border="0"><img src="/header/date/dot.gif" width="7" height="42" alt="." border="0"><img src="/header/date/0.gif" width="12" height="42" alt="0" border="0"><img src="/header/date/2.gif" width="12" height="42" alt="3" border="0"><img src="/header/date/dot.gif" width="7" height="42" alt="." border="0"><img src="/header/date/2002.gif" width="48" height="42" alt="2002" border="0"></td>
    </tr>
    </tbody></table>
 
-<a href="/games/games.html" class="MainMenu-x1">&nbsp;Games</a><br>
-<a href="/news/news.html" class="MainMenu-x2">&nbsp;News</a><br>
-<a href="/newmedia.html" class="MainMenu-x1">&nbsp;Media</a><br>
-<a href="/pointsofview/updates/paws/120301.html" class="MainMenu-x2">&nbsp;Reviews</a><br>
-<a href="/info/120201.html" class="MainMenu-x1">&nbsp;Information</a><br>
-<a href="/ask/aegis/la120301.html" class="MainMenu-x2">&nbsp;Q &amp; A</a><br>
-<a href="/editor/ed112601.html" class="MainMenu-x1">&nbsp;Editorials</a><br>
-<a href="/fanart/fanart112701.html" class="MainMenu-x2">&nbsp;Fan Art</a><br>
-<a href="/mc/112501.html" class="MainMenu-x1">&nbsp;Themes</a><br>
-<a href="/music/music111401.html" class="MainMenu-x2">&nbsp;Music</a><br>
-<a href="/fanfics/updates/fanfics120101.html" class="MainMenu-x1">&nbsp;Fan Fiction</a><br>
-<a href="/board/index.html" class="MainMenu-x2">&nbsp;Message Boards</a><br>
-<a href="/games/release.cgi" class="MainMenu-x1">&nbsp;Release Dates</a><br>
-<a href="/links/links.cgi" class="MainMenu-x2">&nbsp;Links</a><br>
-<a href="/contests/contests.html" class="MainMenu-x1">&nbsp;Contests</a><br>
-<a href="/feedback.html" class="MainMenu-x2">&nbsp;Feedback</a><br>
+<a href="http://www.rpgamer.com/event/e3-2002/e3-2002.html" class="MainMenu">&nbsp;E3 2002</a><br>
+<a href="http://www.rpgamer.com/games/upcoming.html" class="MainMenu">&nbsp;Games</a><br>
+<a href="http://www.rpgamer.com/news/news.html" class="MainMenu">&nbsp;News</a><br>
+<a href="http://www.rpgamer.com/media.html" class="MainMenu">&nbsp;Media</a><br>
+<a href="http://www.rpgamer.com/ask/rico/ar060302.html" class="MainMenu">&nbsp;Q &amp; A</a><br>
+<a href="http://www.rpgamer.com/pointsofview/updates/2002/051702.html" class="MainMenu">&nbsp;Reviews</a><br>
+<a href="http://www.rpgamer.com/info/update.html" class="MainMenu">&nbsp;Information</a><br>
+<a href="http://www.rpgamer.com/editor/ed042102.html" class="MainMenu">&nbsp;Editorials</a><br>
+<a href="http://www.rpgamer.com/fanart/fanart052602.html" class="MainMenu">&nbsp;Fan Art</a><br>
+<a href="http://www.rpgamer.com/mc/052002.html" class="MainMenu">&nbsp;Themes</a><br>
+<a href="http://www.rpgamer.com/music/music240502.html" class="MainMenu">&nbsp;Music</a><br>
+<a href="http://www.rpgamer.com/fanfics/updates/fanfics052902.html" class="MainMenu">&nbsp;Fan Fiction</a><br>
+<a href="http://board.rpgamer.com/" class="MainMenu">&nbsp;Message Forums</a><br>
+<a href="http://www.rpgamer.com/games/release.cgi" class="MainMenu">&nbsp;Release Dates</a><br>
+<a href="http://www.rpgamer.com/links/links.cgi" class="MainMenu">&nbsp;Links</a><br>
+<a href="http://www.rpgamer.com/contests/contests.html" class="MainMenu">&nbsp;Contests</a><br>
+<a href="http://www.rpgamer.com/bios/bios.html" class="MainMenu">&nbsp;Staff Bios</a><br>
+<a href="http://www.rpgamer.com/feedback.html" class="MainMenu">&nbsp;Feedback</a><br>
 
 <div align="center">
 <hr width="100" size="1" noshade="" color="#D0D0D0">
+
 <font color="#E8E8E8" size="-1" face="Verdana, Helvetica, Arial">
-<i>Recent Contest:</i><br>
-<a href="/contests/oct01/okagecontest.html">
-<font color="#B5A855" face="Verdana, Helvetica, Arial"><b>Okage: Halloween Costume</b></font></a><br>
+<i><u>Features</u></i><br>
+<a href="http://www.rpgamer.com/contests/may02/fanart.html"><img src="/graphics/buttons/lostkingdoms.gif" alt="Lost Kingdoms Contest" height="65" width="140" border="0"></a><br>
 
-<hr width="100" size="1" noshade="" color="#D0D0D0">
+<br><i><u>Recent Reviews</u></i><br>
 
-<i>Past Features:</i><br>
-<a href="/news/Q4-2001/111401a.html">
-<font color="#B5A855" face="Verdana, Helvetica, Arial"><b>Interview: Shadow Hearts - Brian Lowe</b></font></a><br><br>
-<a href="/news/Q4-2001/101801b.html">
-<font color="#B5A855" face="Verdana, Helvetica, Arial"><b>Interview: Columbia - Javier Soto</b></font></a><br><br>
-<a href="/news/Q4-2001/101401a.html">
-<font color="#B5A855" face="Verdana, Helvetica, Arial"><b>Interview: Square - Hironobu Sakaguchi</b></font></a><br><br>
-<a href="/news/Q4-2001/100901b.html">
-<font color="#B5A855" face="Verdana, Helvetica, Arial"><b>Interview: Okage - Torrin Rettig</b></font></a><br><br>
+<a href="http://www.rpgamer.com/games/bof/bof2/reviews/bof2strev2.html"><img src="/graphics/buttons/bof2.gif" alt="Review: Breath of Fire II" height="65" width="140" border="0"></a><br>
+<a href="http://www.rpgamer.com/games/arc/arccol/reviews/arccolstrev1.html"><img src="/graphics/buttons/arccol.gif" alt="Review: Arc the Lad Collection" height="65" width="140" border="0"></a><br>
+
+<br><i><u>Past Features</u></i><br>
+<a href="http://www.rpgamer.com/contests/may02/togba.html"><img src="/graphics/buttons/togba.gif" alt="Tactics Ogre: The Knight of Lodis" height="65" width="140" border="0"></a><br>
+
+<a href="http://www.rpgamer.com/music/articles/interviews/stephenkennedy.html"><img src="/graphics/buttons/kennedy.gif" alt="Interview: Stephen Kennedy" height="65" width="140" border="0"></a><br>
+
 </font>
-<br>
 </div>
   </td>
-  <td width="3"><img src="/header/blank.gif" width="3"></td>
+  <td width="5"><img src="/header/blank.gif" width="5"></td>
   <td align="left" valign="top" width="98%">
 <br>
 
@@ -129,7 +133,7 @@ RPGamer uses third parties in order to serve ads for the Web site.  Currently RP
 <br>
 <div align="center">
 
-<font size="1" face="verdana">© 1998-2001 <a href="http://www.rpgamer.com">RPGamer</a> All Rights Reserved
+<font size="1" face="verdana">© 1998-2002 <a href="http://www.rpgamer.com">RPGamer</a> All Rights Reserved
 </font>
 <font size="2" face="verdana">
 <br>
@@ -144,8 +148,9 @@ RPGamer uses third parties in order to serve ads for the Web site.  Currently RP
 
 </div>
 <br>
-<br>
 </font></td>
+<td width="2"></td>
+<td width="1"></td>
 </tr>
 </tbody></table>
 
