learner.org (archived on 2002-06-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 6303,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.4,
  "homepage_snapshot_redirected_domain": "learner.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020330091437id_/http://learner.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020330091437id_/http%3A//learner.org",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "learner.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020604021814id_/http%3A//learner.org/about/privacy_policy.html",
  "policy_title": "ACPB : About Us : Privacy Policy",
  "policy_url": "learner.org/about/privacy_policy.html",
  "sha1": "637d971ae35b050f2978e19431995561812624b0",
  "simhash": 2277673575435020333,
  "simhash_updated": false,
  "site_hostname": "learner.org",
  "site_url": "http://learner.org",
  "smog": 12.4,
  "strict_updated": true,
  "timestamp": "20020604021814",
  "word_count": 1059,
  "year": 2002
}

--- a/l/le/lea/learner.org.html
+++ b/l/le/lea/learner.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the learner.org privacy policy that was archived on 2001-11-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011119164159id_/http%3A//learner.org/about/privacy_policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the learner.org privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604021814id_/http%3A//learner.org/about/privacy_policy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>ACPB : About Us : Privacy Policy</title>
@@ -50,8 +50,8 @@ MM_reloadPage(true);
 <body bgcolor="#FFFFFF" text="#000000" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" onload="MM_preloadImages('../images/menu1_on.gif','../images/menu2_on.gif','../images/menu3_on.gif','../images/menu4_on.gif','../images/menu5_on.gif','../images/topicmenu6_on.gif','../images/submenucat1_on.gif')">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr> 
-    <td align="left" valign="top" width="189"><a href="/index.htm"><img src="/images/sublogo.gif" width="189" height="67" border="0"></a></td>
-    <td align="right" valign="bottom" width="461"><a href="/index.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image31','','/images/menu0_on.gif',1)"><img name="Image31" border="0" src="/images/menu0_off.gif" width="51" height="19"></a><a href="/channel/channel.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image8','','/images/menu1_on.gif',1)"><img src="/images/menu1_off.gif" width="64" height="19" border="0" name="Image8"></a><a href="/catalog/catalog.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','/images/menu2_on.gif',1)"><img src="/images/menu2_off.gif" width="95" height="19" border="0" name="Image9"></a><a href="/about/aboutus.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image10','','/images/menu3_on.gif',1)"><img src="/images/menu3_off.gif" width="69" height="19" border="0" name="Image10"></a><a href="/search.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image11','','/images/menu4_on.gif',1)"><img src="/images/menu4_off.gif" width="55" height="19" border="0" name="Image11"></a><a href="/contactus.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image12','','/images/menu5_on.gif',1)"><img src="/images/menu5_off.gif" width="77" height="19" border="0" name="Image12"></a><br>
+    <td align="left" valign="top" width="189"><a href="/index.html"><img src="/images/sublogo.gif" width="189" height="67" border="0"></a></td>
+    <td align="right" valign="bottom" width="461"><a href="/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image31','','/images/menu0_on.gif',1)"><img name="Image31" border="0" src="/images/menu0_off.gif" width="51" height="19" alt="Home"></a><a href="/channel/channel.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image8','','/images/menu1_on.gif',1)"><img src="/images/menu1_off.gif" width="61" height="19" border="0" name="Image8" alt="Channel"></a><a href="/catalog/catalog.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','/images/menu2_on.gif',1)"><img src="/images/menu2_off.gif" width="92" height="19" border="0" name="Image9" alt="Video Catalog"></a><a href="/about/aboutus.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image10','','/images/menu3_on.gif',1)"><img src="/images/menu3_off.gif" width="64" height="19" border="0" name="Image10" alt="About Us"></a><a href="/search.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image11','','/images/menu4_on.gif',1)"><img src="/images/menu4_off.gif" width="53" height="19" border="0" name="Image11" alt="Search"></a><a href="/contactus.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image12','','/images/menu5_on.gif',1)"><img src="/images/menu5_off.gif" width="77" height="19" border="0" name="Image12" alt="Contact Us"></a><br>
       <img src="/images/spacer.gif" width="461" height="10"></td>
     <td align="left" valign="top" width="100%">&nbsp;</td>
   </tr>
@@ -60,12 +60,12 @@ MM_reloadPage(true);
   <tbody><tr> 
     <td align="left" valign="top" width="175" rowspan="2"> 
       <p><img src="/images/spacer.gif" width="175" height="20"><br>
-        <a href="/about/aboutus.htm"><img src="/images/menu_about1.gif" width="175" height="24" border="0"></a><a href="faq.htm"><img src="/images/menu_about2.gif" width="175" height="37" border="0"></a><br>
-        <a href="/about/annualreport.htm"><img src="/images/menu_about3.gif" width="175" height="24" border="0"></a><br>
-        <a href="/about/staff.htm"><img src="/images/menu_about4.gif" width="175" height="24" border="0"></a><br>
-        <a href="/about/news.htm"><img src="/images/menu_about5.gif" width="175" height="24" border="0"></a><br>
-        <a href="/about/legal_policy.htm"><img src="/images/menu_about6.gif" width="175" height="24" border="0"></a><br>
-        <a href="/about/privacy_policy.htm"><img src="/images/menu_about7.gif" width="175" height="24" border="0"></a> 
+        <a href="/about/aboutus.html"><img src="/images/menu_about1.gif" width="175" height="24" border="0"></a><a href="faq.html"><img src="/images/menu_about2.gif" width="175" height="37" border="0"></a><br>
+        <a href="/about/annualreport.html"><img src="/images/menu_about3.gif" width="175" height="24" border="0"></a><br>
+        <a href="/about/staff.html"><img src="/images/menu_about4.gif" width="175" height="24" border="0"></a><br>
+        <a href="/about/news.html"><img src="/images/menu_about5.gif" width="175" height="24" border="0"></a><br>
+        <a href="/about/legal_policy.html"><img src="/images/menu_about6.gif" width="175" height="24" border="0"></a><br>
+        <a href="/about/privacy_policy.html"><img src="/images/menu_about7.gif" width="175" height="24" border="0"></a> 
     </p></td>
     <td align="left" valign="top" width="25" rowspan="2" background="../images/vertical_rule.gif"><img src="/images/spacer_opaque.gif" width="25" height="20"> 
       <img src="/images/vertical_rule.gif" width="25" height="125"></td>
@@ -240,11 +240,11 @@ MM_reloadPage(true);
     <td align="left" valign="top" width="175">&nbsp;</td>
     <td align="left" valign="top" width="25">&nbsp;</td>
     <td class="copyright" width="450" align="left" valign="top"> 
-      <p><a href="/index.htm">Home</a> | <a href="/channel/channel.htm">Channel</a> 
-        | <a href="/catalog/catalog.htm">Video Catalog</a> | <a href="/about/aboutus.htm">About 
-        Us</a> | <a href="/search.htm">Search</a> | <a href="/contactus.htm">Contact 
+      <p><a href="/index.html">Home</a> | <a href="/channel/channel.html">Channel</a> 
+        | <a href="/catalog/catalog.html">Video Catalog</a> | <a href="/about/aboutus.html">About 
+        Us</a> | <a href="/search.html">Search</a> | <a href="/contactus.html">Contact 
         Us</a></p>
-      <p>© 1997-2001 Annenberg/CPB. All rights reserved. <a href="/about/privacy_policy.htm">Privacy 
+      <p>© 1997-2001 Annenberg/CPB. All rights reserved. <a href="/about/privacy_policy.html">Privacy 
         Policy</a></p>
     </td>
   </tr>
