--- a/e/es/esr/esri.com.html
+++ b/e/es/esr/esri.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the esri.com privacy policy that was archived on 2001-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011217183825id_/http%3A//www.esri.com/company/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the esri.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604023605id_/http%3A//www.esri.com/company/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -18,8 +18,12 @@
 <!--end description-->
 
 
-
 <script language="JavaScript" type="TEXT/JAVASCRIPT">
+//document.writeln(document.location);
+//var a = Date.parse(document.location);
+//var b = new Date(a);
+//document.writeln(b);
+
 <!-- BEGIN Script
 var day="";
 var month="";
@@ -74,7 +78,6 @@ month = "December "
 // End -->
 </script>
 
-
 <script language="javascript" src="/styles/styles.js"></script>
 <script language="javascript" type="TEXT/JAVASCRIPT">
  if (is.IE) {		
@@ -93,7 +96,6 @@ month = "December "
 <body topmargin="0" leftmargin="0" marginheight="0" marginwidth="0">
 <!--end body-->
 
-
 <!--navigation bar-->
 <table border="0" cellspacing="0" cellpadding="0" width="100%">
  <tbody><tr>
@@ -107,31 +109,31 @@ month = "December "
 <!--end navigation bar-->
 
 <!--navigation bar map-->
-<map name="topnav_map">
-<area alt="Software" coords="74,19,142,40" href="/software/index.html" tabindex="1">
-<area alt="Data" coords="150,18,196,38" href="/data/index.html" tabindex="2">
-<area alt="Books" coords="202,18,249,38" href="/library/esripress/index.html" tabindex="3">
-<area alt="Consulting" coords="256,17,331,42" href="/consulting/index.html" tabindex="4">
-<area alt="GIS Store" coords="337,14,404,40" href="http://gisstore.esri.com" tabindex="5">
-<area alt="News" coords="408,17,454,40" href="/news/index.html" tabindex="6">
-<area alt="Events" coords="461,19,514,40" href="/events/index.html" tabindex="7">
-<area alt="Careers" coords="521,18,579,38" href="http://www.esri.com/careers" tabindex="8">
-<area alt="About ESRI" coords="585,16,657,41" href="/company/index.html" tabindex="9">
-<area alt="Support" coords="75,55,136,76" href="http://support.esri.com" tabindex="10">
-<area alt="Education &amp; Training" coords="147,55,280,77" href="/training/index.html" tabindex="11">
-<area alt="GIS for your specialty" coords="288,52,426,78" href="/industries/index.html" tabindex="12">
-<area alt="Partner solutions" coords="435,54,551,77" href="/partners/index.html" tabindex="13">
-<area alt="Library" coords="558,53,612,74" href="/library/index.html" tabindex="14">
+<map name="topnav_map"> 
+  <area alt="Software" coords="68,19,134,40" href="/software/index.html" tabindex="1">
+  <area alt="Data" coords="136,19,180,40" href="/data/index.html" tabindex="2">
+<area alt="Books" coords="182,19,235,40" href="http://gis.esri.com/esripress/index.cfm" tabindex="3">
+<area alt="Consulting" coords="236,19,315,40" href="/consulting/index.html" tabindex="4">
+<area alt="Shop Online" coords="318,19,400,40" href="http://gisstore.esri.com" tabindex="5">
+<area alt="News" coords="402,19,448,40" href="/news/index.html" tabindex="6">
+<area alt="Events" coords="455,19,505,40" href="/events/index.html" tabindex="7">
+<area alt="Careers" coords="516,19,572,40" href="http://www.esri.com/careers" tabindex="8">
+<area alt="About ESRI" coords="580,19,652,40" href="/company/index.html" tabindex="9">
+<area alt="Support" coords="68,52,130,75" href="http://support.esri.com" tabindex="10">
+<area alt="Education &amp; Training" coords="133,52,273,75" href="/training/index.html" tabindex="11">
+  <area alt="Industry/Specialty Solutions" coords="280,52,458,75" href="/industries/index.html" tabindex="12">
+  <area alt="Partner Solutions" coords="465,52,580,75" href="/partners/index.html" tabindex="13">
+  <area alt="Library" coords="588,52,642,75" href="/library/index.html" tabindex="14">
 <area shape="rect" coords="1,6,70,78" href="/index.html" alt="ESRI Home">
 </map>
 <!--end navigation bar map-->
 
 <!--navigation bar sublinks-->
 <map name="topnav_sublinks">
-<area alt="" coords="404,0,468,19" href="/company/contact.html" tabindex="15">
-<area alt="" coords="481,1,534,14" href="/site/search.html" tabindex="16">
-<area alt="" coords="547,1,611,16" href="/site/sitemap.html" tabindex="17">
-<area alt="" coords="616,2,660,18" href="/index.html" tabindex="18">
+<area alt="Contact Us" coords="404,0,475,14" href="/company/contact.html" tabindex="15">
+<area alt="Search" coords="481,0,536,14" href="/site/search.html" tabindex="16">
+<area alt="Site Map" coords="544,0,608,14" href="/site/sitemap.html" tabindex="17">
+<area alt="ESRI Home" coords="615,0,660,14" href="/index.html" tabindex="18">
 </map>
 <!--end of navigation bar sublinks-->
 
@@ -149,35 +151,36 @@ month = "December "
 <td width="577" align="LEFT" valign="TOP">
 <h2>ESRI Web Site Privacy Policy</h2>
 
-<p class="content">ESRI values the privacy of those who visit our Web sites and register for our software and services online.  We think it is important for you to understand when and why we collect personally identifiable information, and how we may use it. This Privacy Statement describes ESRI data collection and use policies.  Please read the entire Privacy Statement before providing any personally identifiable information to us.</p>
+<p class="content">ESRI values the privacy of those who visit our Web sites and register for our software and services online.  We think it is important for you to understand when and why we collect personally identifiable information and how we may use it. This Privacy Statement describes ESRI data collection and use policies.  Please read the entire Privacy Statement before providing any personally identifiable information to us.</p>
 
 <h3>Notice</h3>
-<p class="content">ESRI collects personally identifiable information such as your name, address, telephone number, or E-mail address only if you provide this information to us voluntarily. The voluntary information we collect is used for internal verification to complete transactions, insure appropriate legal use of licensed ESRI software, provide notification to licensees about updates to ESRI software, and to help provide technical and product support to our users. Where appropriate, ESRI may pass this data to the exclusive ESRI International Distributor who provides the above services in your country.</p>
+<p class="content">ESRI collects personally identifiable information, such as your name, address, telephone number, or e-mail address, only if you provide this information to us voluntarily. The voluntary information we collect is used for internal verification to complete transactions, ensure appropriate legal use of licensed ESRI software, provide notification to licensees about updates to ESRI software, and help provide technical and product support to our users. Where appropriate, ESRI may pass this data to the exclusive ESRI international distributor who provides the above services in your country.</p>
 
-<p class="content">ESRI may also use your name, address, and E-mail to send you marketing materials, user conference information, and newsletters, unless you notify us that you do not want to receive these materials. Occasionally, ESRI uses the services of bonded mailing houses that are authorized to use your personally identifiable data only for the benefit of ESRI. </p>
+<p class="content">ESRI may also use your name, address, and e-mail to send you marketing materials, user conference information, and newsletters unless you notify us that you do not want to receive these materials. Occasionally, ESRI uses the services of bonded mailing houses that are authorized to use your personally identifiable data only for the benefit of ESRI. </p>
 
 <h3>Collection</h3>
-<p class="content">Certain information, such as the Internet protocol address of your computer, may be stored through the use of "cookies" intended to speed access to ESRI information and services.  A cookie is a short piece of data that can be used to tell us when you visit our Web sites and can track your browsing habits.  ESRI does not use cookies to store information such as credit card numbers, telephone numbers, or other sensitive information.  A cookie is not an executable program and cannot do anything to your machine.  To maintain your privacy, you can disable your browser's ability to accept cookies.</p>
+<p class="content">Certain information, such as the Internet protocol address of your computer, may be stored through the use of "cookies" intended to speed access to ESRI information and services.  A cookie is a short piece of data that can be used to tell us when you visit our Web sites and track your browsing habits.  ESRI does not use cookies to store information such as credit card numbers, telephone numbers, or other sensitive information.  A cookie is not an executable program and cannot do anything to your machine.  To maintain your privacy, you can disable your browser's ability to accept cookies.</p>
 
-<p class="content">During the installation process for certain ESRI software, information may be placed on your hard drive. This is done to enable the proper functioning of the software and to insure it is used only when properly licensed.  Certain ESRI sites and software installation may require registration to gain access to special services, license keys, or other features.  This information will be used to provide support and deliver specialized services.</p>
+<p class="content">During the installation process for certain ESRI software, information may be placed on your hard drive. This is done to enable the proper functioning of the software and ensure it is used only when properly licensed.  Certain ESRI sites and software installation may require registration to gain access to special services, license keys, or other features.  This information will be used to provide support and deliver specialized services.</p>
 
 <p class="content">ESRI also collects personally identifiable information you provide when you order and register software, data, or services; enter contests; order newsletters; register for training or conferences; or make requests that require a direct response to you.</p>
 
 <h3>Choice</h3>
-<p class="content">ESRI will contact you or send you marketing information about software or services unless you notify ESRI that you do not wish to receive it. You may notify us by sending an E-mail to <a href="moreinfo.html" class="contentlink">info@esri.com</a> as indicated below. Keep in mind, however, that you may not receive information on the ESRI User Conference or other valuable information as a result of your election to be removed from mailing lists</p>
+<p class="content">ESRI will contact you or send you marketing information about software or services unless you notify ESRI that you do not wish to receive it. You may notify us by sending an e-mail to <a href="moreinfo.html" class="contentlink">info@esri.com</a> as indicated below. Keep in mind, however, that you may not receive information on the ESRI User Conference or other valuable information as a result of your election to be removed from mailing lists.</p>
 
-<p class="content">Other than as described in this Privacy Statement, ESRI will not disclose your personally identifiable information unless required to do so by law or in the good faith belief that such action is necessary to (1) conform to the edicts of the law, (2) protect and defend the rights or property of ESRI, (3) or as part of a transfer of assets to a successor in interest.</p>
+<p class="content">Other than as described in this Privacy Statement, ESRI will not disclose your personally identifiable information unless required to do so by law or in the good faith belief that such action is necessary (1) to conform to the edicts of the law, (2) to protect and defend the rights or property of ESRI, (3) or as part of a transfer of assets to a successor in interest.</p>
 
-<p class="content">Except as stated herein, ESRI's corporate policy is not to rent, sell, or otherwise permit access by third parties to databases comprised of your personally identifiable information.</p>
+<p class="content">Except as stated herein, ESRI's corporate policy is not to rent, sell, or otherwise permit access by third parties to databases composed of your personally identifiable information.</p>
 
 <h3>Access</h3>
-<p class="content">ESRI will permit you to access information about you in our database by contacting <a href="moreinfo.html" class="contentlink">info@esri.com</a>.  If you believe any of the information is incorrect or needs updating, please advise us.  We will correct our records upon verification of the requested change. If you no longer wish to receive E-mail or postal notifications about software, services, or special promotions, please let us know by sending E-mail to us at <a href="moreinfo.html" class="contentlink">info@esri.com</a> and specify that you do not want to receive these notifications. Please provide us with your exact name and address as well as a description of the publication or mail piece you received. We will use reasonable efforts to refrain from including you when sending marketing materials to ESRI clients by noting your election in our database.</p>
+<p class="content">ESRI will permit you to access information about you in our database by contacting <a href="moreinfo.html" class="contentlink">info@esri.com</a>.  If you believe any of the information is incorrect or needs updating, please advise us.  We will correct our records upon verification of the requested change. If you no longer wish to receive e-mail or postal notifications about software, services, or special promotions, please let us know by sending an e-mail to us at <a href="moreinfo.html" class="contentlink">info@esri.com</a> and specifying that you do not want to receive these notifications. Please provide us with your exact name and address as well as a description of the publication or mail piece you received. We will use reasonable efforts to refrain from including you when sending marketing materials to ESRI clients by noting your election in our database.</p>
 
 <h3>Security</h3>
-<p class="content">ESRI will take reasonable and prudent precautions to insure that your personally identifiable data is protected against unauthorized access, use, or disclosure.</p>
+<p class="content">ESRI will take reasonable and prudent precautions to ensure that your personally identifiable data is protected against unauthorized access, use, or disclosure.</p>
 
 <h3>Enforcement</h3>
-<p class="content">If you believe for any reason that ESRI has not followed these principles, please contact us at <a href="moreinfo.html" class="contentlink">info@esri.com</a> and ESRI will act promptly to investigate, correct as appropriate, and advise you of the correction.  Please identify the issue as a Privacy Policy concern in your communication to ESRI.</p>
+<p class="content">If you believe for any reason that ESRI has not followed these principles, please contact us at <a href="moreinfo.html" class="contentlink">info@esri.com</a>, and ESRI will act promptly to investigate, correct as appropriate, and advise you of the correction.  Please identify the issue as a Privacy Policy concern in your communication to ESRI.</p>
+
 </td>
 </tr>
 </tbody></table>
@@ -195,16 +198,16 @@ month = "December "
       <img src="/graphics/dottedline660.gif" alt="dotted line" width="660" height="10" border="0">
         <span class="navlinks"><a href="/software/index.html">Software</a>&nbsp;|</span> 
         <span class="navlinks"><a href="/data/index.html">Data</a>&nbsp;|</span>
-		<span class="navlinks"><a href="/library/esripress/index.html">Books</a>&nbsp;|</span> 
+		<span class="navlinks"><a href="http://gis.esri.com/esripress/index.cfm">Books</a>&nbsp;|</span> 
         <span class="navlinks"><a href="/consulting/index.html">Consulting</a>&nbsp;|</span> 
-        <span class="navlinks"><a href="http://gisstore.esri.com/">GIS Store</a>&nbsp;|</span> 
+        <span class="navlinks"><a href="http://gisstore.esri.com/">Shop Online</a>&nbsp;|</span> 
         <span class="navlinks"><a href="/news/index.html">News</a>&nbsp;|</span> 
 		<span class="navlinks"><a href="/events/index.html">Events</a>&nbsp;|</span> 
         <span class="navlinks"><a href="http://www.esri.com/careers">Careers</a>&nbsp;|</span> 
 		<span class="navlinks"><a href="/company/index.html">About ESRI</a></span><br> 
 		<span class="navlinks"><a href="http://support.esri.com/">Support</a>&nbsp;|</span>
 		<span class="navlinks"><a href="/training/index.html">GIS Education &amp; Training</a>&nbsp;|</span>
-		<span class="navlinks"><a href="/industries/index.html">GIS for Your Specialty</a>&nbsp;|</span>
+		<span class="navlinks"><a href="/industries/index.html">Industry/Specialty Solutions</a>&nbsp;|</span>
 		<span class="navlinks"><a href="/partners/index.html">Partner Solutions</a>&nbsp;|</span>
 		<span class="navlinks"><a href="/library/index.html">Library</a></span>
         <br><br>
