--- a/t/th/the/thecatsite.com.html
+++ b/t/th/the/thecatsite.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the thecatsite.com privacy policy that was archived on 2001-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011218054454id_/http%3A//thecatsite.com/contact/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thecatsite.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604023929id_/http%3A//www.thecatsite.com/contact/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>TheCatSite.com - Privacy Statement</title>
