--- a/t/to/tow/towson.edu.html
+++ b/t/to/tow/towson.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the towson.edu privacy policy that was archived on 2001-07-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010728140804id_/http%3A//www.towson.edu/tu/events/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the towson.edu privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604024504id_/http%3A//towson.edu/tu/events/privacy.html) for the most accurate reproduction.-->
 
 <html><!-- #BeginTemplate "/Templates/templateUnivRelations.dwt" --><head>
 <title>Towson University University Relations Office</title>
