--- a/c/co/coo/coolquiz.com.html
+++ b/c/co/coo/coolquiz.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the coolquiz.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201215925id_/http%3A//www.coolquiz.com/privacy_statement.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the coolquiz.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604024937id_/http%3A//www.coolquiz.com/privacy_statement.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -10,59 +10,76 @@
 
 <body>
 
-<table>
-  <tbody><tr>
-    <td bgcolor="#33CCFF" height="30" valign="top"><b><font face="Verdana,Arial,Helvetica,sans-serif" color="#000000" size="4">Privacy
-      Statement</font></b></td>
-  </tr>
-  <tr>
-    <td bgcolor="#33CCFF">
-      <table align="center" border="0" cellpadding="12" cellspacing="0">
-        <tbody>
-          <tr>
-            <td bgcolor="#E8FFFF">
-              <p align="left"><b><font face="verdana,arial,helvetica" size="3">General</font><font face="verdana,arial,helvetica" size="2"><br>
-              </font></b><font face="verdana,arial,helvetica" size="2">This Cool
-              Quiz Network, Inc. privacy statement describes the privacy
-              practices for CoolQuiz.com and the Network web sites. As part of
-              our commitment to your privacy, we have written this policy to
-              help you understand what information we gather about individuals
-              who visit our Web sites, how we use that information after we've
-              gathered it, and when and how we disclose that information.</font></p>
-              <p align="left"><b><font face="verdana,arial,helvetica" size="3">Information
-              We Collect</font></b><font face="verdana,arial,helvetica" size="2"><br>
-              Cool Quiz Network, Inc. collects information in the Newsletter
-              signup form that can be found on all pages.&nbsp; Submitting this
-              form is the only way to be entered onto the newsletter recipient
-              list.</font>
-              </p><p align="left"><font face="verdana,arial,helvetica" size="2">We
-              will also ask you for email information on the "Hall of
-              Fame" entry pages to notify you of a possible prize awards.</font>
-              </p><p align="left"><b><font face="verdana,arial,helvetica" size="3">How
-              We Use Your Information</font></b><font face="verdana,arial,helvetica" size="2"><br>
-              Cool Quiz Network, Inc. uses information only for newsletter
-              mailings and prize notifications.</font>
-              </p><p align="left"><font face="verdana,arial,helvetica" size="3"><b>Who
-              Else Sees Your Information</b>.</font><font face="verdana,arial,helvetica" size="2"><br>
-              Cool Quiz Network, Inc. does NOT share information with anyone.</font>
-              </p><p align="left"><font face="verdana,arial,helvetica" size="2">We
-              may have to disclose information about you to law enforcement,
-              other government officials or third parties in order to comply
-              with applicable law or valid legal process or to protect the
-              personal safety of our users or the public.</font>
-              </p><p align="left"><b><font face="verdana,arial,helvetica" size="3">How
-              You Can Update, Correct or Delete Your Information</font></b><font face="verdana,arial,helvetica" size="2"><br>
-              If you want to be removed from the Cool Quiz newsletter - simply
-              respond to the newsletter with "Remove Me" in the
-              subject line or go to our 'Remove' Page - <a href="http://www.coolquiz.com/remove.asp">http://www.coolquiz.com/remove.asp</a>&nbsp;&nbsp;<br>
-              To update your email information, you may send the request to <a href="mailto:info@coolquiz.net">info@coolquiz.net</a></font>
-              </p></td>
-          </tr>
-        </tbody>
-      </table>
-    </td>
-  </tr>
-</tbody></table>
+<table width="100%" border="0" cellspacing="0" cellpadding="15"><tbody><tr><td>
+<font face="Verdana,Arial,Helvetica" size="-1">
+<b>PRIVACY STATEMENT for Cool Quiz Network, Inc.</b></font>
+<table width="100%" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td height="2" bgcolor="#01B2EB"><spacer type="block" width="300"></spacer></td></tr></tbody></table>
+
+<font face="Verdana,Arial,Helvetica" size="1">
+<p>The Cool Quiz Network, Inc. has created this privacy statement in order to demonstrate
+our firm commitment to privacy. The following discloses our information
+gathering and dissemination practices for all web sites that incorporate the
+Cool Quiz Network.</p>
+
+<p>We use your IP address to help diagnose problems with our server, and to
+administer our Web site. Your IP address is used to gather broad demographic
+information.</p>
+
+<p>Our site may use cookies to keep track of quiz scores, chances, shopping carts and to make sure
+you don't see the same ad repeatedly.</p>
+
+<p>Our site's registration form requires users to give us contact information
+(like their name and email address). We may use customer contact information
+from the registration form to send the user information about our company.
+Users may opt-out of receiving future mailings; see the choice/opt-out
+section below.</p>
+
+<p>This site contains links to other sites. The Cool Quiz Network, Inc.&nbsp; is not
+responsible for the privacy practices or the content of such Web sites.</p>
+
+<p>Our site uses an order form for customers to request information, products,
+and services. We collect visitor's contact information (like their email
+address). Contact information from the order form is used to send orders to
+our customers. Users may opt-out of receiving future mailings; see the
+choice/opt-out section below.</p>
+
+<p>Our online surveys ask visitors for contact information (like their email
+address). The customer's contact information is used to contact the visitor
+when necessary. Users may opt-out of receiving future mailings; see the
+choice/opt-out section below.</p>
+
+<p>We run contests on our site in which we ask visitors for contact information
+(like their email address). We use contact data from our contests to send
+users information about our company. Users may opt-out of receiving future
+mailings; see the choice/opt-out section below.</p>
+
+<p><b>Public Forums</b><br>
+This site makes chat rooms, forums, message boards, quizzes, polls and/or news groups available to its users. Please remember that any information that is disclosed in these areas becomes public information and you should exercise caution when deciding to disclose your personal information.</p>
+
+
+<p><b>Security</b><br>
+This site has security measures in place to protect the loss, misuse and alteration of the information under our control. </p>
+
+<p><b>Choice/Opt-Out</b><br>
+Our site provides users the opportunity to opt-out of receiving communications from us and our partners at the point where we request information about the visitor. This site gives users the following options for removing their information from our database to not receive future communications or to no longer receive our service.</p>
+
+<p>You can send email to <a href="mailto:webmaster@coolquiz.net">webmaster@coolquiz.net</a></p>
+
+<p><b>Correct/Update</b><br>
+This site gives users the following options for changing and modifying
+information previously provided.</p>
+
+<p><b>Contacting the Web Site</b><br>
+If you have any questions about this privacy statement, the practices of
+this site, or your dealings with this Web site, you can contact:<br>
+<br>
+Cool Quiz Network, Inc.<br>
+2943 Rushland Rd.<br>
+Jamison, PA&nbsp; 18929<br>
+email: <a href="mailto:webmaster@coolquiz.net">webmaster@coolquiz.net</a></p>
+
+</font>
+</td></tr></tbody></table>
 
 
 
