ca.com (archived on 2002-06-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 4328,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.73,
  "homepage_snapshot_redirected_domain": "ca.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020331075938id_/http://www.ca.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020331075938id_/http%3A//ca.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "ca.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020604025208id_/http%3A//www.ca.com/caprivacy.htm",
  "policy_title": "Computer Associates Copyright Information",
  "policy_url": "ca.com/caprivacy.htm",
  "sha1": "0c969e532b8aaa4621a41d5cbc334026f16f3c2c",
  "simhash": 16888461638999896008,
  "simhash_updated": true,
  "site_hostname": "ca.com",
  "site_url": "http://ca.com",
  "smog": 14.7,
  "strict_updated": true,
  "timestamp": "20020604025208",
  "word_count": 681,
  "year": 2002
}

--- a/c/ca/ca./ca.com.html
+++ b/c/ca/ca./ca.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ca.com privacy policy that was archived on 2001-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011218003004id_/http%3A//ca.com/caprivacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ca.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604025208id_/http%3A//www.ca.com/caprivacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Computer Associates Copyright Information</title>
@@ -24,19 +24,11 @@
 <tr><td colspan="3"><img src="/ssi/i/ffffff.gif" width="1" height="2" border="0"></td></tr>
 <form name="seek1" method="POST" action="http://search.ca.com/query.html"></form>
 <!--Ultraseek Config Vars -->
-<input type="hidden" name="col" value="prodsol">
-<input type="hidden" name="col" value="gps">
-<input type="hidden" name="col" value="educate">
-<input type="hidden" name="col" value="partners">
-<input type="hidden" name="col" value="press">
-<input type="hidden" name="col" value="cspots">
-<input type="hidden" name="col" value="vic">
-<input type="hidden" name="col" value="intcai">
-<input type="hidden" name="col" value="www">
+<input type="hidden" name="col" value="">
 <input type="hidden" name="qp" value="">
 <input type="hidden" name="qs" value="">
-<input type="hidden" name="qc" value="prodsol gps educate partners press cspots vic intcai www">
-<input type="hidden" name="pw" value="600">
+<input type="hidden" name="qc" value="">
+<input type="hidden" name="pw" value="100%">
 <input type="hidden" name="ws" value="0">
 <input type="hidden" name="qm" value="0">
 <input type="hidden" name="st" value="1">
@@ -44,7 +36,7 @@
 <input type="hidden" name="lk" value="1">
 <input type="hidden" name="rf" value="0">
 <input type="hidden" name="rq" value="0">
-<!--Ultraseek Config Vars -->
+<!--End Ultraseek Config Vars -->
 <tr><td colspan="3" align="right"><a href="http://search.ca.com/" class="fronttop">SEARCH</a>&nbsp;
 <input type="text" name="qt" size="10" maxlength="2033" value="">&nbsp;<input type="image" src="/ssi/i/go_button.gif" width="27" height="17" border="0" alt="GO">&nbsp;</td></tr>
 <tr><td colspan="3" valign="bottom"><img src="/ssi/i/top_privacy.gif" width="400" height="38" border="0" alt="Privacy Policy"></td></tr>
@@ -85,6 +77,8 @@ CA strives to keep your information and data accurate, complete and current.  We
 <p><b>Business Relationships</b><br>
 This website contains links to other websites.  CA is not responsible for the privacy practices or the content of such websites.</p>
 
+<p>Computer Associates uses pixels, or transparent GIF files, to help manage online advertising. These GIF files are provided by our ad management partner, DoubleClick. These files enable DoubleClick to recognize a unique cookie on your Web browser, which in turn enables us to learn which advertisements bring users to our website. The cookie was placed by us, or by another advertiser who works with DoubleClick. With both cookies and Spotlight technology, the information that we collect and share is anonymous and not personally identifiable. It does not contain your name, address, telephone number, or email address. For more information about DoubleClick, including information about how to opt out of these technologies, go to <a href="http://www.doubleclick.net/us/corporate/privacy/">http://www.doubleclick.net/us/corporate/privacy</a>.</p>
+
 <p><b>Cookies</b><br>
 Portions of this website use cookies to keep track of your visit, or to deliver content specific to your interests.  A "Cookie" is a small amount of data transferred to your browser and read by the Web server that placed it there.  It works as a sort of identification card, recording your preferences and previously entered information.  You can set your browser to notify you when you receive a cookie, giving you the chance to accept or reject it.  </p>
 
@@ -96,7 +90,7 @@ If you have any questions or comments about our privacy statement or practices, 
 
 <p>CA reserves the right to modify or update this privacy statement at any time without notice.</p>
 
-<p><i>Last updated December 1, 2000.</i></p>
+<p><i>Last updated 02/14/2002.</i></p>
 
 
 <!--END CONTENT-->
@@ -108,7 +102,7 @@ If you have any questions or comments about our privacy statement or practices, 
 <tbody><tr><td nowrap=""><a href="/catalk.htm" class="frontbot">Contact </a>&nbsp;&nbsp;&nbsp;
 <a href="/calegal.htm" class="frontbot">Legal Notice</a>&nbsp;&nbsp;&nbsp;
 <a href="/caprivacy.htm" class="topsubmain">Privacy Policy</a><br>
-<span class="copyright">Copyright © 2001 Computer Associates International, Inc. All rights reserved.</span></td>
+<span class="copyright">Copyright © 2002 Computer Associates International, Inc. All rights reserved.</span></td>
 <td align="RIGHT"><a href="/about/ebusiness.htm"><img src="/ssi/i/tagline.gif" width="266" height="16" border="0" alt="The Software That Manages eBusiness"></a></td>
 </tr>
 </tbody></table>
